# ika_tracker_obs

./: .gitignore  README.md  pyproject.toml
src/ika_tracker/: __init__.py  board.py  cli.py  game.py  ika.py  size.py  source.py  view.py
